--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,7 +23,7 @@
         <ul class="todo-list">
           <li *ngFor="let task of tasks(); index as i">
             <div class="view">
-              <input class="toggle" type="checkbox" [checked]="task.completed" (change)="updateTask(i)" />
+              <input (change)="updateTask(i)" class="toggle" type="checkbox" [checked]="task.completed" />
               <label>{{ task.title }}</label>
               <button class="destroy" (click)="deleteTask(i)"></button>
             </div>
@@ -54,13 +54,13 @@
             </div>
             <input class="edit" value="Make dishes" />
           </li>
-          -->
+        -->
         </ul>
       </section>
       <!-- This footer should be hidden by default and shown when there are todos -->
       <footer class="footer">
         <!-- This should be `0 items left` by default -->
-        <span class="todo-count"><strong>{{ tasks().length }}</strong> items</span>
+        <span class="todo-count"><strong>{{tasks().length}}</strong> items</span>
         <!-- Remove this if you don't implement routing -->
         <ul class="filters">
           <li>
